# machine-learning

./: .gitignore  Makefile  agent.cpp  agent.hpp  analysis.R  arena.cpp  arena.hpp  build_codingame.sh  choice.cpp  choice.hpp  compile.sh  evaluator.cpp  evaluator.hpp  game.cpp  game.hpp  game_generator.cpp  game_generator.hpp  notes.org  pod_agent.cpp  pod_agent.hpp  pod_game.cpp  pod_game.hpp  pod_game_generator.cpp  pod_game_generator.hpp  population_manager.cpp  population_manager.hpp  ptrain.sh  pure_train.cpp  random_tournament.cpp  random_tournament.hpp  run_arena.cpp  run_arena.sh  simple_pod_evaluator.cpp  simple_pod_evaluator.hpp  team.hpp  team_evaluator.cpp  team_evaluator.hpp  tournament.hpp  tree_evaluator.cpp  tree_evaluator.hpp  (+3 more)
arena-project/: Makefile
arena-project/analysis/: analysis.R  util.R
arena-project/src/: agent.cpp  agent.hpp  choice.cpp  choice.hpp  evaluator.cpp  evaluator.hpp  game.hpp  game_generator.cpp  game_generator.hpp  pod_agent.cpp  pod_agent.hpp  pod_game.cpp  pod_game.hpp  population_manager.cpp  pure_train.cpp  rbf_evaluator.hpp  run_codingame.cpp  run_local.cpp  simple_pod_evaluator.cpp  simple_pod_evaluator.hpp  team.cpp  team_evaluator.cpp  team_evaluator.hpp  test_nlopt.cpp  tree_evaluator.cpp  tree_evaluator.hpp  types.hpp  utility.cpp  utility.hpp
simple-recursive-brain/: CMakeLists.txt  analysis.R  brain.cpp  brain.hpp  compile.sh  node.cpp  node.hpp  test-run.cpp  util.hpp
simple-recursive-brain/src/: brain.cpp  brain.hpp  edge.cpp  edge.hpp  node.cpp  node.hpp  test-run.cpp  util.cpp  util.hpp
testing/RAI-test/: Rprof.out  main.R
testing/RBFBN-Learn/: compile.sh  flann-test  flann-test.cpp  gaussian-node.R  limited-L2.hpp  network.R  notes.txt  test  test.R  test.cpp  test2.R  test3.R
